--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 # GUI
-# customtkinter==5.2.2  # OLD: Has trackpad scrolling issues on macOS
-toga==0.5.2  # NEW: Native UI framework with proper macOS support
+customtkinter==5.2.2
 
 # HTTP Client
 httpx==0.27.2  # Pinned to 0.27.x for mistralai compatibility
